--- a/checklist_ro/_config.yml
+++ b/checklist_ro/_config.yml
@@ -26,8 +26,8 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/NordicESMHub/checklist-ro  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
+  url: https://github.com/NordicESMHub/checklist-FAIR-master-thesis  # Online location of your book
+  path_to_book: checklist_ro  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
